--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
- <a href="https://www.tinkercad.com/joinclass/Q38S11KK6">ИТ-Вертикаль</a></p>
+ <a href="https://www.tinkercad.com/joinclass/Q38S11KK6">Зажги огонёк</a></p>
   <a href=" https://github.com/deka552/deka552.github.io/blob/master/kka.step">Archive 2 </a></p>
               <a href="   https://docs.google.com/spreadsheets/d/1wd3XROFp8qklzj8UzWpPAZiSmN4cvS9OnB3D1Cto5_E/edit#gid=1486065593"> Excel документ  </a></p>
 
